# freefox

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: docker-publish.yml
config/: config.docker.example.yaml  config.example.yaml
docs/: docker-deployment.md  google-drive-setup.md  index.html  installation.md
freefox/: __init__.py  config.py  integrity.py  queue.py  service.py  watcher.py  worker.py
freefox/backends/: __init__.py  factory.py  gdrive.py  rsync.py
scripts/: dashboard.py  gdrive_smoke.py  local_smoke.py  queue_status.py  watch_gdrive.py
systemd/: freefox.service
tests/: test_core.py
